--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -54,6 +54,15 @@
     }
   }
 
+  &--green {
+    background-color: $color-primary;
+    color: $color-white;
+    
+    &::after {
+      background-color:$color-primary;
+    }
+  }
+
   /* pseudo-element */
 
   &::after {
