--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -67,6 +67,7 @@
     // because starts flipped, this flips it over
     transform: rotateY(0);
   }
+
   // FRONT SIDE STYLING
   &__picture { 
     background-size: cover; 
@@ -75,6 +76,11 @@
     // adds similar polygon shape as preceding sections
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
     clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+
+    // these might not be needed anymore; see notes
+    // rounds edges of card images that are sharp due to overflow
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
     
 
     &--1 {
@@ -119,6 +125,7 @@
     right: 2rem;
     width: 75%;
   }
+
   // this is not nested under above because it should be treated as its own element
   &__heading-span {
     padding: 1rem 1.5rem;
